# Compressible-LBM

./: CMakeLists.txt  main.cu  preprocessed.i
include/glad/src/: glad.c
include/imgui-master/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
include/imgui-master/examples/example_win32_opengl3/: main.cpp
include/implot-master/: implot.h  implot_internal.h
lib/glfw_build/examples/boing.dir/Debug/: boing.exe.recipe  boing.ilk
lib/glfw_build/examples/gears.dir/Debug/: gears.exe.recipe  gears.ilk
lib/glfw_build/examples/heightmap.dir/Debug/: heightmap.exe.recipe  heightmap.ilk
lib/glfw_build/examples/offscreen.dir/Debug/: offscreen.exe.recipe  offscreen.ilk
lib/glfw_build/examples/particles.dir/Debug/: particles.exe.recipe  particles.ilk
lib/glfw_build/examples/sharing.dir/Debug/: sharing.exe.recipe  sharing.ilk
lib/glfw_build/examples/simple.dir/Debug/: simple.exe.recipe  simple.ilk
lib/glfw_build/examples/splitview.dir/Debug/: splitview.exe.recipe  splitview.ilk
lib/glfw_build/examples/wave.dir/Debug/: wave.ilk  (+1 more)
src/Graphics/imgui/: Plot.h  helpers.h
src/Graphics/opengl/: Shader.h  buffer.h  controls.h  opengl_context.h
src/Graphics/opengl/GLSL/: compute.glsl
src/Physics/: Device.cuh  Runge-Kutta.cuh  dataset.cuh  initial-conditions.h  process.cuh
src/Physics/Deprecated/: streaming_kernel.cuh
src/Physics/GPU-code/: equilibrium.cuh  hermite.cuh  macros.cuh  physics.cuh  stress-tensor.cuh
src/Physics/LBM/: Domain.cuh  correction-Factor.cuh  differentials.h  initial.cuh
src/settings/: log.h  setup.cuh
src/src/: Device.cu  Plot.cu  Shader.cu  buffer.cu  dataset.cu  log.cu  setup.cu
(+287 files in other folders)
